[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/fonts/main_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/worlds/Menu.gd" type="Script" id=2]

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 107.0
margin_top = 36.0
margin_right = 212.0
margin_bottom = 144.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 105.0
margin_bottom = 18.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 105.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "ANTENNA"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 105.0
margin_bottom = 108.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 22.0
margin_right = 82.0
margin_bottom = 70.0
custom_constants/separation = 5

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer2"]
margin_right = 60.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Quit")
text = "start"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer2"]
margin_top = 25.0
margin_right = 60.0
margin_bottom = 45.0
text = "options"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer2"]
margin_top = 50.0
margin_right = 60.0
margin_bottom = 70.0
focus_neighbour_bottom = NodePath("../Start")
text = "quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer2/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer2/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer2/Quit" to="." method="_on_Quit_pressed"]
